<resources>
    <string name="app_name">Reaction Color Game</string>
    <string name="title_activity_game">Reaction Color Game</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Pick the correct color or word! You have 4 seconds to do so, with the timer getting faster and faster each time!</string>
    <string name="current_instr">Click the color red</string>
    <string name="option_one">red</string>
    <string name="option_two">blue</string>
    <string name="option_three">green</string>
    <string name="option_four">yellow</string>
    <string name="playButton">Play!</string>
    <string name="instrText">Instructions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_records">Records</string>
    <string name="settings_header_sound">Sounds</string>
    <string name="clear_message">Records Cleared!</string>

    <string name="lossMessage">You lose!</string>
    <string name="retry">Play Again!</string>
    <string name="points_message">Total Points: %1$d</string>
    <string name="time_message">Total Time: %1$s seconds</string>
    <string name="avg_time_message">Average Time: %1$s seconds</string>
    <string name="new_record">New Record!</string>
    <string name="view_history">View Game</string>

    <string name="countdown">%1$d</string>
    <string name="countdown_go">Go!</string>
    <string name="about_text">Created by Sam San Nicolas</string>
    <string name="reset_stats">Reset Stats</string>

    <string name="high_points_title">Most Points:</string>
    <string name="high_points">%1$d points</string>
    <string name="high_avg_title">Best Average:</string>
    <string name="high_avg">%1$s sec/point</string>
    <string name="high_time_title">Longest Time:</string>
    <string name="high_time">%1$s seconds</string>

    <string name="history_title">Previous Game</string>
    <string name="history_times">%1$s sec</string>
    <string name="history_q">Press the: </string>
    <string name="history_a">You pressed: </string>
    <string name="history_t">Time: </string>

    <!-- Shared Preferences Values -->
    <string name="high_score">0</string>
    <string name="longest_time">0.00</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
